manifest/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
  labels:
    app: product-api
spec:
  replicas: 1
  template:
    metadata:
      name: product-api
      labels:
        app: product-api
    spec:
      containers:
        - name: product-api
          image: rimdesk/product-api
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: product-api
