manifest/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-api
spec:
  selector:
    app: product-api
  ports:
    - port: 3000
      targetPort: 3000
      name: http
      protocol: TCP
  type: ClusterIP
